<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/stepik_power_solution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/etValueA"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="128dp"
        android:gravity="center_horizontal"
        android:hint="@string/coefficientA"
        android:inputType="numberDecimal|numberSigned"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepik_power_solution"
        />

    <EditText
        android:id="@+id/etValueB"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/coefficientB"
        android:inputType="numberDecimal|numberSigned"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/etValueA"
        app:layout_constraintTop_toBottomOf="@+id/stepik_power_solution"
        />

    <EditText
        android:id="@+id/etValueC"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/coefficientC"
        android:inputType="numberDecimal|numberSigned"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/etValueB"
        app:layout_constraintTop_toBottomOf="@+id/stepik_power_solution"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSolveQuadraticEquation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:padding="8dp"
        android:text="@string/solve_quadratic_equation"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValueA"
        />
</androidx.constraintlayout.widget.ConstraintLayout>